openshift/keycloak/keycloak-networkpolicy.yaml
---
# Allow Keycloak pod unrestricted egress (DB, DNS, clustering, OIDC callbacks)
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: keycloak-egress-allow-all
  namespace: keycloak
spec:
  podSelector:
    matchLabels:
      app: keycloak
      app.kubernetes.io/instance: keycloak
      app.kubernetes.io/managed-by: keycloak-operator
  policyTypes:
    - Egress
  egress:
    - {}

---
# Allow ingress to keycloak from the OpenShift router
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: keycloak-ingress-router
  namespace: keycloak
spec:
  podSelector:
    matchLabels:
      app: keycloak
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - port: 8080
          protocol: TCP
        - port: 9000
          protocol: TCP

---
# Allow postgres-db to receive connections from Keycloak pod
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-ingress-from-keycloak
  namespace: keycloak
spec:
  podSelector:
    matchLabels:
      app: postgres-db
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: keycloak
              app.kubernetes.io/instance: keycloak
              app.kubernetes.io/managed-by: keycloak-operator
      ports:
        - port: 5432
          protocol: TCP
