openshift/keycloak/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-agenticai-to-keycloak
  namespace: keycloak
spec:
  podSelector:
    matchLabels:
      app: keycloak
      app.kubernetes.io/instance: keycloak
      app.kubernetes.io/managed-by: keycloak-operator
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: agenticai-demo
      ports:
        - port: 8080
          protocol: TCP
